tests/reference/asr-array_size_01-d0f0677.stderr
warning: Implied save feature
 --> tests/errors/array_size_01.f90:3:5
  |
3 |     integer :: a(3)
  |     ^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/array_size_01.f90:4:5
  |
4 |     integer :: size_a
  |     ^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: Incorrect number of arguments passed to the size intrinsic.It accepts at least 1 and at most 3 arguments.
 --> tests/errors/array_size_01.f90:5:14
  |
5 |     size_a = size(a, 1, 4, kind=4)
  |              ^^^^^^^^^^^^^^^^^^^^^ 
